Adding search API for employee